# OnlineShopRAG

./: .env.example  .gitignore  README.md  Scenario.json  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: main.py  models.py  settings.py  streamlit_app.py
src/core/: agent.py  logging_config.py  memory.py  startup.py
src/llm/: client.py  prompts.py
src/rag/: chunking.py  retriever.py
src/scenario/: nodes.py  runner.py  tools.py
